# scoring-machine

./: .gitignore  README.md  main.py  process.py  pyproject.toml  pyrightconfig.json  tui.py
data/: Untitled.ipynb  core_data.csv  dass_data.csv  pwb_data.csv  temps_data.csv  wrqol_data.csv
data/demo/: demo_data.csv
jupyter/: norms.ipynb  playground.ipynb
lib/: __init__.py  data_container.py  data_provider.py  errors.py  processor.py  reporter.py  sanitizer.py  scorer.py  standardizer.py  test_specs.py  utils.py
lib/tests/_base/: _base.html
lib/tests/core/: base_report.html  core_norms.csv  core_specs.json  report.html
lib/tests/dass/: base_report.html  dass_norms.csv  dass_specs.json
lib/tests/demo/: base_report.html  demo_norms.csv  demo_specs.json
lib/tests/pwb/: base_report.html  pwb_norms.csv  pwb_specs.json  report.html
lib/tests/temps/: base_report.html  temps_norms.csv  temps_specs.json
lib/tests/wrqol/: base_report.html  report.html  wrqol_norms.csv  wrqol_specs.json
lib/textual/screens/: end_screen.py  file_screen.py  score_screen.py  splash_screen.py
marimo/: compute_norms.py
marimo/__marimo__/: compute_norms.html
marimo/__marimo__/session/: compute_norms.py.json
